feat: basic webpage template for user file input

--- a/darkmoon/index.html
+++ b/darkmoon/index.html
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-</body>
 
 <head>
     <meta charset="utf-8">
@@ -22,39 +12,39 @@
 
     <h1>
 
-        <label for="username" class="opSystem" data-icon="u"></label>
+        <label for="Operating" class="opSystem" data-icon="u"></label>
 
-        <input id="username" name="opSystem" required="required" type="text" placeholder="Operating System" />
+        <input id="Operating" name="opSystem" required="required" type="text" placeholder="Operating System" />
 
     </h1>
 
     <h1>
 
-        <label for="password" class="vers" data-icon="p"> </label>
+        <label for="version" class="vers" data-icon="p"> </label>
 
-        <input id="password" name="password" required="required" type="text" placeholder="Version" />
+        <input id="version" name="password" required="required" type="text" placeholder="Version" />
 
     </h1>
     <h1>
 
-        <label for="username" class="bu" data-icon="u"> </label>
+        <label for="build" class="bu" data-icon="u"> </label>
 
-        <input id="bu" name="username" required="required" type="text" placeholder="Build" />
+        <input id="build" name="bu" required="required" type="text" placeholder="Build" />
     </h1>
 
-    <form action="/action_page.php">
+    <form action>
         <h2> .ISO Upload </h2>
         <input type="file" id="myFile" name="filename">
         <input type="submit">
     </form>
 
-    <form action="/action_page.php">
+    <form>
         <h2> Packer Template Upload </h2>
         <input type="file" id="myFile" name="filename">
         <input type="submit">
     </form>
 
-    <form action="/action_page.php">
+    <form>
         <h2> Answer File Upload </h2>
         <input type="file" id="myFile" name="filename">
         <input type="submit">
